[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "jarvis"
authors = [{name = "Bhuwan Bhatt", email = "bhattbhuwan13@outlook.com"}]
keywords = ["jarvis", "LLM", "personal assistant" ]

[project.scripts]
jarvis = "jarvis.__main__:main"  
